# ParallelCalc

./: CMakeLists.txt  ReadMe.md  Test.hpp  ThreadPool.hpp  main.cpp
Tests/: Test.hpp
ThreadPool/: AClass.hpp  ThreadPool.hpp
